# azure-product-growth-intelligence-platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: azure.example.yaml  base.yaml  local.yaml
diagrams/: azure-reference-architecture.mmd  governance-lineage-flow.mmd  local-data-flow.mmd  ml-and-analytics-lifecycle.mmd
docs/architecture/: azure-service-mapping.md  churn-prediction.md  cost-and-environment-assumptions.md  data-contracts.md  data-flow.md  deployment-options.md  diagrams.md  experiment-analysis.md  final-azure-reference-architecture.md  funnel-analytics.md  genai-product-insights.md  ingestion-and-quality.md  local-to-azure-mapping.md  metric-framework.md  platform-operating-model.md  powerbi-reporting-layer.md  recommendation-baseline.md  retention-and-cohorts.md  security-governance-and-lineage.md  synthetic-data-model.md  system-overview.md  user-segmentation.md
docs/decisions/: 0001-synthetic-data-only.md  0002-local-first-azure-mappable.md  0003-layered-data-organisation.md  0004-configuration-and-secret-management.md  0005-deterministic-analytics.md  0006-workload-separation.md  0007-no-paid-cloud-required.md  README.md
docs/evidence/: README.md
docs/governance/: genai-insight-governance.md  reporting-governance.md  security-privacy-responsible-analytics.md
docs/portfolio/: evidence-index.md  interview-explanation-guide.md  portfolio-walkthrough.md  recruiter-summary.md  technical-review-guide.md
docs/runbooks/: build-reporting-layer.md  generate-product-insights.md  generate-synthetic-data.md  local-development.md  (+8 more)
infrastructure/: README.md
scripts/: generate_churn_evidence.py  generate_experiment_evidence.py  generate_final_portfolio_evidence.py  generate_funnel_evidence.py  generate_ingestion_evidence.py  generate_product_insight_evidence.py  generate_recommendation_evidence.py  generate_reporting_evidence.py  generate_retention_evidence.py  generate_segmentation_evidence.py
(+221 files in other folders)
