[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "azure-product-growth-intelligence-platform"
version = "0.1.0"
description = "Local-first Azure-mappable product analytics and growth intelligence reference platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Azure Product Growth Intelligence Contributors" }]
keywords = ["product-analytics", "growth", "azure", "ml", "experimentation"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "scipy>=1.13,<2",
  "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
pgi = "product_growth_intelligence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/product_growth_intelligence"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=product_growth_intelligence --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["product_growth_intelligence"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
packages = ["product_growth_intelligence"]
strict = true
warn_return_any = true
warn_unused_configs = true
